--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
     "private": true,
     "type": "module",
     "scripts": {
-      "dev": "tsx watch src/index.ts",
-      "build": "tsc -p tsconfig.json",
-      "start": "node dist/index.js",
-      "test:otp": "node scripts/test-otp.mjs"
+        "dev": "tsx watch src/index.ts",
+        "build": "tsc -p tsconfig.json",
+        "start": "node dist/index.js",
+        "test:otp": "node scripts/test-otp.mjs"
     },
     "dependencies": {
-      "fastify": "^5.0.0",
-      "@fastify/rate-limit": "^10.0.0",
-      "ioredis": "^5.4.1",
-      "@aws-sdk/client-sqs": "^3.620.0"
+        "@aws-sdk/client-sqs": "^3.620.0",
+        "@aws-sdk/client-sns": "^3.873.0",
+        "@fastify/rate-limit": "^10.0.0",
+        "fastify": "^5.0.0",
+        "ioredis": "^5.4.1"
     },
     "devDependencies": {
-      "typescript": "^5.5.4",
-      "tsx": "^4.19.0",
-      "@types/node": "^22.5.0"
+        "@types/node": "^22.5.0",
+        "tsx": "^4.19.0",
+        "typescript": "^5.5.4"
     }
 }
-  
