--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,7 @@ services:
     build: .
     image: ezstack:local
     ports: ["8080:8080"]
-    environment:
-      EZAUTH_API_KEY: dev-secret
-      REDIS_URL: redis://redis:6379
+    env_file: .env
     depends_on:
       redis:
         condition: service_healthy
