Firebase env examples

--- a/env.example
+++ b/env.example
@@ -2,9 +2,10 @@ PORT=8080
 EZAUTH_API_KEY=ea_test_example
 EZAUTH_MASTER_KEY=ea_master_example
 AUTH_DISABLE=false
+AUTH_LEGACY=false
 
 # Redis (required)
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
 
 # Email (required for OTE)
 EMAIL_FROM=no-reply@example.com
@@ -32,3 +33,20 @@ AWS_SECRET_ACCESS_KEY=__fill_if_using_real_aws__
 SQS_QUEUE_NAME=ez-send-queue
 AWS_SQS_ENDPOINT= # e.g. http://localhost:4566 for LocalStack
 SQS_ENABLE=false
+
+# Firebase Admin (choose one)
+# Option A: ADC via GOOGLE_APPLICATION_CREDENTIALS pointing to a service account JSON file
+# GOOGLE_APPLICATION_CREDENTIALS=C:\\path\\to\\service-account.json
+# Option B: Inline credentials
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
+
+# API key hashing pepper (required when using Firebase auth)
+APIKEY_PEPPER=change_me
+
+# Auth caching
+APIKEY_CACHE_TTL_MS=30000
+APIKEY_REDIS_TTL_SEC=60
+# If true, allows previously cached entries when Firebase is unreachable
+AUTH_FAIL_SAFE=false
