--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,14 @@ services:
         condition: service_healthy
   redis:
     image: redis:7-alpine
+    command: ["redis-server", "--appendonly", "yes"]
     ports: ["6379:6379"]
+    volumes:
+      - redisdata:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 3s
       retries: 20
+volumes:
+  redisdata:
