--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     },
     "dependencies": {
         "@aws-sdk/client-ses": "^3.620.0",
-        "@aws-sdk/client-sqs": "^3.620.0",
         "@aws-sdk/client-sns": "^3.873.0",
+        "@aws-sdk/client-sqs": "^3.620.0",
         "@fastify/rate-limit": "^10.0.0",
+        "@google-cloud/secret-manager": "^6.1.0",
         "fastify": "^5.0.0",
-        "ioredis": "^5.4.1",
-        "firebase-admin": "^12.5.0"
+        "firebase-admin": "^12.5.0",
+        "ioredis": "^5.4.1"
     },
     "devDependencies": {
         "@types/node": "^22.5.0",
