Switching to using firebase auth instead of custom tenants

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,11 @@ services:
       # Core config
       PORT: ${PORT:-8080}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
+      EZAUTH_API_KEY: ${EZAUTH_API_KEY}
+      FIREBASE_ID_TOKEN: ${FIREBASE_ID_TOKEN}
       # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_DISABLE: ${AUTH_DISABLE:-false}
-      AUTH_LEGACY: ${AUTH_LEGACY:-false}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE:-false}
       # Email/SES
       EMAIL_FROM: ${EMAIL_FROM:-no-reply@example.com}
