--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
 services:
   api:
-    build: .
-    image: ezstack:local
+    image: ezstack:latest
     ports: ["8080:8080"]
     environment:
       # Core config
