--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,8 @@
 services:
   ezstack:
+    build:
+      context: ./apps/ezstack
+      dockerfile: Dockerfile
     image: ezstack:latest
     ports: ["8080:8080"]
     environment:
@@ -30,7 +33,10 @@ services:
         condition: service_healthy
 
   ezauth:
-    image: ezstack:latest
+    build:
+      context: ./apps/ezauth
+      dockerfile: Dockerfile
+    image: ezauth:latest
     ports: ["8081:8080"]
     environment:
       SERVICE: ezauth
