--- a/env.example
+++ b/env.example
@@ -1,5 +1,4 @@
 PORT=8080
-AUTH_DISABLE=false
 
 # Redis (required)
 REDIS_URL=redis://redis:6379
@@ -7,6 +6,8 @@ REDIS_URL=redis://redis:6379
 # Email (required for OTE)
 EMAIL_FROM=no-reply@example.com
 EMAIL_DRY_RUN=true
+# For OTP via SMS or generic OTP testing, echo codes to logs locally
+OTP_DRY_RUN=true
 # Optional: point to LocalStack or custom endpoint
 AWS_SES_ENDPOINT=
 
