--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,11 @@ services:
       # Core config
       PORT: ${PORT_EZSTACK:-8080}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
+      # Supabase
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      SUPABASE_JWKS_URL: ${SUPABASE_JWKS_URL:-${SUPABASE_URL}/auth/v1/jwks}
       # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZSTACK:-false}
@@ -18,10 +23,7 @@ services:
       EMAIL_DRY_RUN: ${EMAIL_DRY_RUN:-true}
       AWS_REGION: ${AWS_REGION:-us-east-1}
       AWS_SES_ENDPOINT: ${AWS_SES_ENDPOINT:-}
-      # Firebase/Google inline credentials (required for GSM & Firestore)
-      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
-      FIREBASE_CLIENT_EMAIL: ${FIREBASE_CLIENT_EMAIL:-}
-      FIREBASE_PRIVATE_KEY: ${FIREBASE_PRIVATE_KEY:-}
+      # Firebase removed
       # Auth caching
       APIKEY_CACHE_TTL_MS: ${APIKEY_CACHE_TTL_MS:-30000}
       APIKEY_REDIS_TTL_SEC: ${APIKEY_REDIS_TTL_SEC:-60}
@@ -42,6 +44,11 @@ services:
       # Core config
       PORT: ${PORT_EZAUTH:-8080}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
+      # Supabase
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      SUPABASE_JWKS_URL: ${SUPABASE_JWKS_URL:-${SUPABASE_URL}/auth/v1/jwks}
       # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZAUTH:-false}
@@ -57,10 +64,7 @@ services:
       SQS_ENABLE: ${SQS_ENABLE:-false}
       AWS_SQS_ENDPOINT: ${AWS_SQS_ENDPOINT:-}
       SQS_QUEUE_NAME: ${SQS_QUEUE_NAME:-ez-send-queue}
-      # Firebase/Google inline credentials (required for GSM & Firestore)
-      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
-      FIREBASE_CLIENT_EMAIL: ${FIREBASE_CLIENT_EMAIL:-}
-      FIREBASE_PRIVATE_KEY: ${FIREBASE_PRIVATE_KEY:-}
+      # Firebase removed
       # Per-route and OTP/OTE defaults (tenants can override via Redis settings)
       OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
       OTP_LENGTH: ${OTP_LENGTH:-6}
