Adding supabase vars to site build

--- a/env.example
+++ b/env.example
@@ -1,4 +1,8 @@
-PORT=8080
+PORT_EZSTACK=8080
+PORT_EZAUTH=8081
+
+# FOR DEV TESTING SCRIPTS
+EZAUTH_API_KEY=
 
 # Redis (required)
 REDIS_URL=redis://redis:6379
@@ -32,6 +36,11 @@ SQS_QUEUE_NAME=ez-send-queue
 AWS_SQS_ENDPOINT= # e.g. http://localhost:4566 for LocalStack
 SQS_ENABLE=false
 
+# Supabase (required)
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_JWKS_URL=${SUPABASE_URL}/auth/v1/jwks
 
 # API key hashing pepper
 # Provide a literal value or integrate your secret manager of choice
@@ -42,3 +51,11 @@ APIKEY_CACHE_TTL_MS=30000
 APIKEY_REDIS_TTL_SEC=60
 # If true, allows previously cached entries when introspection upstream is unreachable
 AUTH_FAIL_SAFE=false
+
+
+# ---------------- SITE --------------------
+
+# --- Stripe (Checkout) ---
+STRIPE_SECRET_KEY=sk_test_...
+PLAN_PRO_PRICE_ID=price_...
+PLAN_SCALE_PRICE_ID=price_...
