--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,13 @@ services:
     build:
       context: ./apps/ezstack-site
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_SUPABASE_URL: ${SUPABASE_URL}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+        NEXT_PUBLIC_API_BASE_URL: http://ezstack:8080
     image: ezstack-site:latest
+    container_name: ezstack-site
     ports: ["3000:3000"]
-    environment:
-      # Next.js runtime env
-      NEXT_PUBLIC_SUPABASE_URL: ${SUPABASE_URL}
-      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-      # Functions/API base URL – point to ezstack service
-      NEXT_PUBLIC_API_BASE_URL: http://ezstack:8080
     depends_on:
       ezstack:
         condition: service_started
@@ -20,6 +19,7 @@ services:
       context: ./apps/ezstack
       dockerfile: Dockerfile
     image: ezstack:latest
+    container_name: ezstack
     ports: ["8080:8080"]
     environment:
       SERVICE: ezstack
@@ -53,11 +53,12 @@ services:
       context: ./apps/ezauth
       dockerfile: Dockerfile
     image: ezauth:latest
-    ports: ["8081:8080"]
+    container_name: ezauth
+    ports: ["8081:8081"]
     environment:
       SERVICE: ezauth
       # Core config
-      PORT: ${PORT_EZAUTH:-8080}
+      PORT: ${PORT_EZAUTH:-8081}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
       # Supabase
       SUPABASE_URL: ${SUPABASE_URL}
@@ -96,6 +97,7 @@ services:
         condition: service_healthy
   redis:
     image: redis:7-alpine
+    container_name: redis
     command: ["redis-server", "--appendonly", "yes"]
     ports: ["6379:6379"]
     volumes:
