--- a/env.example
+++ b/env.example
@@ -42,6 +42,12 @@ SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_JWKS_URL=${SUPABASE_URL}/auth/v1/jwks
 
+# Next.js Supabase (required for the frontend)
+NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
+NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
 # API key hashing pepper
 # Provide a literal value or integrate your secret manager of choice
 APIKEY_PEPPER=change_me
