--- a/apps/ezauth/package.json
+++ b/apps/ezauth/package.json
@@ -13,8 +13,9 @@
     "@fastify/cors": "^10.0.0",
     "@fastify/rate-limit": "^10.0.0",
     "@google-cloud/secret-manager": "^6.1.0",
-    "@supabase/supabase-js": "^2.45.4",
     "fastify": "^5.0.0",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "ioredis": "^5.4.1",
     "jose": "^5.9.3"
   },
