--- a/apps/ezstack-site/package.json
+++ b/apps/ezstack-site/package.json
@@ -10,8 +10,8 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.57.4",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -30,7 +30,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "jsdom": "^26.1.0",
-    "supabase": "^2.40.7",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
