--- a/apps/ezstack/package.json
+++ b/apps/ezstack/package.json
@@ -12,9 +12,10 @@
     "@fastify/rate-limit": "^10.0.0",
     "@google-cloud/kms": "^4.3.0",
     "@google-cloud/secret-manager": "^6.1.0",
-    "@supabase/supabase-js": "^2.45.4",
     "argon2": "^0.44.0",
     "fastify": "^5.0.0",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "ioredis": "^5.4.1",
     "jose": "^5.9.3"
   },
