--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,12 @@ services:
       context: ./apps/ezstack-site
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
-        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+        NEXT_PUBLIC_FIREBASE_API_KEY: ${NEXT_PUBLIC_FIREBASE_API_KEY:?error}
+        NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN:?error}
+        NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${NEXT_PUBLIC_FIREBASE_PROJECT_ID:?error}
+        NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET:?error}
+        NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID:?error}
+        NEXT_PUBLIC_FIREBASE_APP_ID: ${NEXT_PUBLIC_FIREBASE_APP_ID:?error}
         NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://ezstack:8080}
         NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL:-http://localhost:3000}
     image: ezstack-site:latest
@@ -27,11 +31,8 @@ services:
       # Core config
       PORT: ${PORT_EZSTACK:-8080}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      # Supabase
-      SUPABASE_URL: ${SUPABASE_URL}
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
-      SUPABASE_JWKS_URL: ${SUPABASE_JWKS_URL:-${SUPABASE_URL}/auth/v1/jwks}
+      # Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
       # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZSTACK:-false}
@@ -45,6 +46,7 @@ services:
       APIKEY_REDIS_TTL_SEC: ${APIKEY_REDIS_TTL_SEC:-60}
     volumes:
       - ./scripts:/app/scripts:ro
+      - ./secrets:/app/secrets:ro
     depends_on:
       redis:
         condition: service_healthy
@@ -61,11 +63,8 @@ services:
       # Core config
       PORT: ${PORT_EZAUTH:-8081}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      # Supabase
-      SUPABASE_URL: ${SUPABASE_URL}
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
-      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
-      SUPABASE_JWKS_URL: ${SUPABASE_JWKS_URL:-${SUPABASE_URL}/auth/v1/jwks}
+      # Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
       # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZAUTH:-false}
@@ -93,6 +92,7 @@ services:
       RATE_ROUTE_MAX: ${RATE_ROUTE_MAX:-30}
     volumes:
       - ./scripts:/app/scripts:ro
+      - ./secrets:/app/secrets:ro
     depends_on:
       redis:
         condition: service_healthy
