--- a/env.example
+++ b/env.example
@@ -36,15 +36,18 @@ SQS_QUEUE_NAME=ez-send-queue
 AWS_SQS_ENDPOINT= # e.g. http://localhost:4566 for LocalStack
 SQS_ENABLE=false
 
-# Supabase (required)
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-SUPABASE_JWKS_URL=${SUPABASE_URL}/auth/v1/jwks
+# Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
+FIREBASE_PROJECT_ID=
+# FIREBASE_SERVICE_ACCOUNT_KEY=  # Optional: JSON string, will use secrets/ezstack-service-account.json if not provided
 
-# Next.js Supabase (required for the frontend)
-NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
-NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+# Next.js Firebase (required for the frontend)
+# Get these values from Firebase Console → Project Settings → General → Your apps → Web app
+NEXT_PUBLIC_FIREBASE_API_KEY=your-web-api-key-here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-firebase-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789012
+NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdef123456
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
