--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,10 @@ services:
     image: ezstack-site:latest
     container_name: ezstack-site
     ports: ["3000:3000"]
+    volumes:
+      - ./secrets:/app/secrets:ro
+    environment:
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
     depends_on:
       ezstack:
         condition: service_started
