--- a/env.example
+++ b/env.example
@@ -62,6 +62,19 @@ APIKEY_REDIS_TTL_SEC=60
 AUTH_FAIL_SAFE=false
 
 
+# ---------------- PRODUCTION DEPLOYMENT --------------------
+
+# Traefik & SSL Configuration (for production deployment only)
+FRONTEND_HOST=ezstack.app
+API_HOST=api.ezstack.app
+AUTH_HOST=auth.ezstack.app
+LETS_ENCRYPT_EMAIL=your-email@example.com
+
+# Production URLs (update these for your domain)
+NEXT_PUBLIC_API_BASE_URL=https://api.ezstack.app
+NEXT_PUBLIC_SITE_URL=https://ezstack.app
+CORS_ORIGIN=https://ezstack.app
+
 # ---------------- SITE --------------------
 
 # --- Stripe (Checkout) ---
