Removing traefik, adding cloudflare

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,11 @@
 networks:
-  web:
-    external: false
   internal:
     external: false
 
 volumes:
-  traefik_letsencrypt:
   redisdata:
 
 services:
-  traefik:
-    image: traefik:v3.0
-    container_name: traefik
-    restart: unless-stopped
-    command:
-      - "--api.dashboard=false"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-
-      # EntryPoints
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-
-      # Redirect HTTP -> HTTPS
-      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
-
-      # Let's Encrypt (HTTP-01)
-      - "--certificatesresolvers.le.acme.httpchallenge=true"
-      - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.le.acme.email=${LETS_ENCRYPT_EMAIL}"
-      - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - "traefik_letsencrypt:/letsencrypt"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    networks:
-      - web
-      - internal
-
   ezstack-site:
     build:
       context: ./apps/ezstack-site
@@ -52,14 +17,13 @@ services:
         NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET:?error}
         NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID:?error}
         NEXT_PUBLIC_FIREBASE_APP_ID: ${NEXT_PUBLIC_FIREBASE_APP_ID:?error}
-        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://ezstack:8080}
-        NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL:-http://localhost:3000}
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://api.ezstack.app}
+        NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL:-https://ezstack.app}
     image: ezstack-site:latest
     container_name: ezstack-site
     restart: unless-stopped
-    # Don't publish to the Internet; only Traefik should
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"  # Exposed for Cloudflare Tunnel
     volumes:
       - ./secrets:/app/secrets:ro
     environment:
@@ -68,14 +32,7 @@ services:
     depends_on:
       ezstack:
         condition: service_started
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`${FRONTEND_HOST}`)"
-      - "traefik.http.routers.frontend.entrypoints=websecure"
-      - "traefik.http.routers.frontend.tls.certresolver=le"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
     networks:
-      - web
       - internal
   
   ezstack:
@@ -85,43 +42,30 @@ services:
     image: ezstack:latest
     container_name: ezstack
     restart: unless-stopped
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"  # Exposed for Cloudflare Tunnel
     environment:
       SERVICE: ezstack
-      # Core config
       PORT: ${PORT_EZSTACK:-8080}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      # Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
       FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
-      # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZSTACK:-false}
-      # Email/SES (not typically needed here, but harmless)
       EMAIL_FROM: ${EMAIL_FROM:-no-reply@example.com}
       EMAIL_DRY_RUN: ${EMAIL_DRY_RUN:-true}
       AWS_REGION: ${AWS_REGION:-us-east-1}
       AWS_SES_ENDPOINT: ${AWS_SES_ENDPOINT:-}
-      # Auth caching
       APIKEY_CACHE_TTL_MS: ${APIKEY_CACHE_TTL_MS:-30000}
       APIKEY_REDIS_TTL_SEC: ${APIKEY_REDIS_TTL_SEC:-60}
       NODE_ENV: production
-      # CORS (example): allow your site host
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://$FRONTEND_HOST}
+      CORS_ORIGIN: ${CORS_ORIGIN:-https://ezstack.app}
     volumes:
       - ./scripts:/app/scripts:ro
       - ./secrets:/app/secrets:ro
     depends_on:
       redis:
         condition: service_healthy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`${API_HOST}`)"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls.certresolver=le"
-      - "traefik.http.services.api.loadbalancer.server.port=8080"
     networks:
-      - web
       - internal
 
   ezauth:
@@ -131,31 +75,23 @@ services:
     image: ezauth:latest
     container_name: ezauth
     restart: unless-stopped
-    expose:
-      - "8081"
+    ports:
+      - "8081:8081"  # Exposed for Cloudflare Tunnel
     environment:
       SERVICE: ezauth
-      # Core config
       PORT: ${PORT_EZAUTH:-8081}
       REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      # Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
       FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID:-}
-      # Prefer Google Secret Manager; provide full resource name
       APIKEY_PEPPER: ${APIKEY_PEPPER:-}
       AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZAUTH:-false}
-      # Email/SES
       EMAIL_FROM: ${EMAIL_FROM:-no-reply@example.com}
-      # Email local testing
       EMAIL_DRY_RUN: ${EMAIL_DRY_RUN:-true}
-      # OTP/SMS local testing
       OTP_DRY_RUN: ${OTP_DRY_RUN:-true}
       AWS_REGION: ${AWS_REGION:-us-east-1}
       AWS_SES_ENDPOINT: ${AWS_SES_ENDPOINT:-}
-      # SQS (optional for OTP async send)
       SQS_ENABLE: ${SQS_ENABLE:-false}
       AWS_SQS_ENDPOINT: ${AWS_SQS_ENDPOINT:-}
       SQS_QUEUE_NAME: ${SQS_QUEUE_NAME:-ez-send-queue}
-      # Per-route and OTP/OTE defaults (tenants can override via Redis settings)
       OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
       OTP_LENGTH: ${OTP_LENGTH:-6}
       OTP_MAX_ATTEMPTS: ${OTP_MAX_ATTEMPTS:-5}
@@ -166,29 +102,21 @@ services:
       DEST_PER_MINUTE: ${DEST_PER_MINUTE:-5}
       RATE_ROUTE_MAX: ${RATE_ROUTE_MAX:-30}
       NODE_ENV: production
-      # CORS (example): allow your site host
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://$FRONTEND_HOST}
+      CORS_ORIGIN: ${CORS_ORIGIN:-https://ezstack.app}
     volumes:
       - ./scripts:/app/scripts:ro
       - ./secrets:/app/secrets:ro
     depends_on:
       redis:
         condition: service_healthy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.auth.rule=Host(`${AUTH_HOST}`)"
-      - "traefik.http.routers.auth.entrypoints=websecure"
-      - "traefik.http.routers.auth.tls.certresolver=le"
-      - "traefik.http.services.auth.loadbalancer.server.port=8081"
     networks:
-      - web
       - internal
+
   redis:
     image: redis:7-alpine
     container_name: redis
     command: ["redis-server", "--appendonly", "yes"]
     restart: unless-stopped
-    # DO NOT publish redis to the Internet
     expose:
       - "6379"
     volumes:
