Firebase vars now come from secrets json, not env

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# ---------------- LOCAL DEVELOPMENT --------------------
+
+# Service ports
 PORT_EZSTACK=8080
 PORT_EZAUTH=8081
 
@@ -7,13 +10,49 @@ EZAUTH_API_KEY=
 # Redis (required)
 REDIS_URL=redis://redis:6379
 
-# Email (required for OTE)
+# ---------------- FIREBASE --------------------
+
+# Firebase service account is read from: secrets/ezstack-service-account.json
+# Place your Firebase Admin SDK service account JSON file there
+
+# Firebase client config (required for the frontend)
+# Get these values from Firebase Console → Project Settings → General → Your apps → Web app
+NEXT_PUBLIC_FIREBASE_API_KEY=your-web-api-key-here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-firebase-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789012
+NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdef123456
+
+# ---------------- API SECURITY --------------------
+
+# API key hashing pepper (required)
+APIKEY_PEPPER=change_me
+
+# API key caching
+APIKEY_CACHE_TTL_MS=30000
+APIKEY_REDIS_TTL_SEC=60
+
+# Auth fail-safe per service (if true, allows previously cached entries when introspection is unreachable)
+AUTH_FAIL_SAFE_EZSTACK=false
+AUTH_FAIL_SAFE_EZAUTH=false
+
+# ---------------- EMAIL & SMS --------------------
+
+# Email configuration (required for OTE)
 EMAIL_FROM=no-reply@example.com
 EMAIL_DRY_RUN=true
+
 # For OTP via SMS or generic OTP testing, echo codes to logs locally
 OTP_DRY_RUN=true
-# Optional: point to LocalStack or custom endpoint
+
+# AWS SES configuration (only needed if EMAIL_DRY_RUN=false)
+AWS_REGION=us-east-1
 AWS_SES_ENDPOINT=
+# AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are picked up automatically by AWS SDK
+# Only needed for production AWS (not needed for LocalStack or dry-run mode)
+
+# ---------------- OTP/OTE CONFIGURATION --------------------
 
 # OTP/OTE defaults (optional; tenant settings can override per tenant)
 OTP_TTL_SECONDS=300
@@ -28,56 +67,32 @@ RESEND_COOLDOWN_SEC=30
 DEST_PER_MINUTE=5
 RATE_ROUTE_MAX=30
 
-# SQS (optional for now; leave blank to skip)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=__fill_if_using_real_aws__
-AWS_SECRET_ACCESS_KEY=__fill_if_using_real_aws__
-SQS_QUEUE_NAME=ez-send-queue
-AWS_SQS_ENDPOINT= # e.g. http://localhost:4566 for LocalStack
+# ---------------- AWS SQS (OPTIONAL) --------------------
+
+# SQS configuration (optional; leave SQS_ENABLE=false to skip)
 SQS_ENABLE=false
+SQS_QUEUE_NAME=ez-send-queue
+AWS_SQS_ENDPOINT=
+# Set AWS_SQS_ENDPOINT for LocalStack, e.g. http://localhost:4566
+# For production AWS, leave empty and ensure AWS_ACCESS_KEY_ID/AWS_SECRET_ACCESS_KEY are set
 
-# Firebase (optional - will use secrets/ezstack-service-account.json if not provided)
-FIREBASE_PROJECT_ID=
-# FIREBASE_SERVICE_ACCOUNT_KEY=  # Optional: JSON string, will use secrets/ezstack-service-account.json if not provided
+# ---------------- URLS & CORS --------------------
 
-# Next.js Firebase (required for the frontend)
-# Get these values from Firebase Console → Project Settings → General → Your apps → Web app
-NEXT_PUBLIC_FIREBASE_API_KEY=your-web-api-key-here
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-firebase-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789012
-NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdef123456
+# Local URLs
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
-
-# API key hashing pepper
-# Provide a literal value or integrate your secret manager of choice
-APIKEY_PEPPER=change_me
-
-# Auth caching
-APIKEY_CACHE_TTL_MS=30000
-APIKEY_REDIS_TTL_SEC=60
-# If true, allows previously cached entries when introspection upstream is unreachable
-AUTH_FAIL_SAFE=false
-
+CORS_ORIGIN=http://localhost:3000
 
 # ---------------- PRODUCTION DEPLOYMENT --------------------
 
-# Traefik & SSL Configuration (for production deployment only)
-FRONTEND_HOST=ezstack.app
-API_HOST=api.ezstack.app
-AUTH_HOST=auth.ezstack.app
-LETS_ENCRYPT_EMAIL=your-email@example.com
-
 # Production URLs (update these for your domain)
-NEXT_PUBLIC_API_BASE_URL=https://api.ezstack.app
-NEXT_PUBLIC_SITE_URL=https://ezstack.app
-CORS_ORIGIN=https://ezstack.app
+# NEXT_PUBLIC_API_BASE_URL=https://api.ezstack.app
+# NEXT_PUBLIC_SITE_URL=https://ezstack.app
+# CORS_ORIGIN=https://ezstack.app
 
-# ---------------- SITE --------------------
+# ---------------- STRIPE (OPTIONAL) --------------------
 
-# --- Stripe (Checkout) ---
-STRIPE_SECRET_KEY=sk_test_...
-PLAN_PRO_PRICE_ID=price_...
-PLAN_SCALE_PRICE_ID=price_...
+# Stripe configuration (only needed if using payment features)
+# STRIPE_SECRET_KEY=sk_test_...
+# PLAN_PRO_PRICE_ID=price_...
+# PLAN_SCALE_PRICE_ID=price_...
