--- a/apps/ezstack/Dockerfile
+++ b/apps/ezstack/Dockerfile
@@ -17,7 +17,7 @@ COPY package.json ./
 RUN npm install --omit=dev --no-fund --no-audit
 COPY --from=builder /app/dist ./dist
 
-ENV NODE_ENV=production
+ENV NODE_ENV=development
 EXPOSE 8080
 USER nodeuser
 CMD ["node", "dist/index.js"]
