--- a/apps/ezstack/package.json
+++ b/apps/ezstack/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/kms": "^4.3.0",
     "@google-cloud/secret-manager": "^6.1.0",
     "argon2": "^0.44.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.0.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
