fix ezauth ---> Exactly that lol

--- a/env.example
+++ b/env.example
@@ -27,7 +27,7 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdef123456
 # ---------------- API SECURITY --------------------
 
 # API key hashing pepper (required)
-APIKEY_PEPPER=change_me
+FASTIFY_PUBLIC_APIKEY_PEPPER=change_me
 
 # API key caching
 APIKEY_CACHE_TTL_MS=30000
@@ -46,11 +46,17 @@ EMAIL_DRY_RUN=true
 # For OTP via SMS or generic OTP testing, echo codes to logs locally
 OTP_DRY_RUN=true
 
-# AWS SES configuration (only needed if EMAIL_DRY_RUN=false)
+# AWS configuration (needed for SNS SMS and SES email)
 AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-here
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key-here
+# Alternative: FASTIFY_PUBLIC_AWS_* variants also supported
+FASTIFY_PUBLIC_AWS_REGION=us-east-1
+FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID=your-aws-access-key-here
+FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY=your-aws-secret-key-here
 AWS_SES_ENDPOINT=
-# AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY are picked up automatically by AWS SDK
-# Only needed for production AWS (not needed for LocalStack or dry-run mode)
+# For LocalStack testing, set AWS_SES_ENDPOINT=http://localhost:4566
+# For production AWS, leave AWS_SES_ENDPOINT empty
 
 # ---------------- OTP/OTE CONFIGURATION --------------------
 
@@ -67,14 +73,11 @@ RESEND_COOLDOWN_SEC=30
 DEST_PER_MINUTE=5
 RATE_ROUTE_MAX=30
 
-# ---------------- AWS SQS (OPTIONAL) --------------------
+# ---------------- AWS SNS (SMS) --------------------
 
-# SQS configuration (optional; leave SQS_ENABLE=false to skip)
-SQS_ENABLE=false
-SQS_QUEUE_NAME=ez-send-queue
-AWS_SQS_ENDPOINT=
-# Set AWS_SQS_ENDPOINT for LocalStack, e.g. http://localhost:4566
-# For production AWS, leave empty and ensure AWS_ACCESS_KEY_ID/AWS_SECRET_ACCESS_KEY are set
+# SNS is now used for SMS OTP delivery
+# Configure AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY above for SNS to work
+# Set OTP_DRY_RUN=true for local testing (OTP codes will be logged instead of sent)
 
 # ---------------- URLS & CORS --------------------
 
