--- a/apps/ezauth/package.json
+++ b/apps/ezauth/package.json
@@ -9,18 +9,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.620.0",
+    "@aws-sdk/client-sns": "^3.913.0",
     "@aws-sdk/client-sqs": "^3.620.0",
     "@fastify/cors": "^10.0.0",
     "@fastify/rate-limit": "^10.0.0",
     "@google-cloud/secret-manager": "^6.1.0",
+    "argon2": "^0.44.0",
     "fastify": "^5.0.0",
+    "fastify-plugin": "^5.1.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "ioredis": "^5.4.1",
     "jose": "^5.9.3"
   },
   "devDependencies": {
-    "@types/node": "^20.19.14",
+    "@types/node": "^20.19.22",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   }
