--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,23 +43,11 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"  # Exposed for Cloudflare Tunnel
-    environment:
-      SERVICE: ezstack
-      PORT: ${PORT_EZSTACK:-8080}
-      REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      APIKEY_PEPPER: ${APIKEY_PEPPER:-}
-      AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZSTACK:-false}
-      EMAIL_FROM: ${EMAIL_FROM:-no-reply@example.com}
-      EMAIL_DRY_RUN: ${EMAIL_DRY_RUN:-true}
-      AWS_REGION: ${AWS_REGION:-us-east-1}
-      AWS_SES_ENDPOINT: ${AWS_SES_ENDPOINT:-}
-      APIKEY_CACHE_TTL_MS: ${APIKEY_CACHE_TTL_MS:-30000}
-      APIKEY_REDIS_TTL_SEC: ${APIKEY_REDIS_TTL_SEC:-60}
-      NODE_ENV: development
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://ezstack.app}
     volumes:
       - ./scripts:/app/scripts:ro
       - ./secrets:/app/secrets:ro
+    env_file:
+      - .env
     depends_on:
       redis:
         condition: service_healthy
@@ -75,34 +63,11 @@ services:
     restart: unless-stopped
     ports:
       - "8081:8081"  # Exposed for Cloudflare Tunnel
-    environment:
-      SERVICE: ezauth
-      PORT: ${PORT_EZAUTH:-8081}
-      REDIS_URL: ${REDIS_URL:-redis://redis:6379}
-      APIKEY_PEPPER: ${APIKEY_PEPPER:-}
-      AUTH_FAIL_SAFE: ${AUTH_FAIL_SAFE_EZAUTH:-false}
-      EMAIL_FROM: ${EMAIL_FROM:-no-reply@example.com}
-      EMAIL_DRY_RUN: ${EMAIL_DRY_RUN:-true}
-      OTP_DRY_RUN: ${OTP_DRY_RUN:-true}
-      AWS_REGION: ${AWS_REGION:-us-east-1}
-      AWS_SES_ENDPOINT: ${AWS_SES_ENDPOINT:-}
-      SQS_ENABLE: ${SQS_ENABLE:-false}
-      AWS_SQS_ENDPOINT: ${AWS_SQS_ENDPOINT:-}
-      SQS_QUEUE_NAME: ${SQS_QUEUE_NAME:-ez-send-queue}
-      OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
-      OTP_LENGTH: ${OTP_LENGTH:-6}
-      OTP_MAX_ATTEMPTS: ${OTP_MAX_ATTEMPTS:-5}
-      OTE_TTL_SECONDS: ${OTE_TTL_SECONDS:-300}
-      OTE_LENGTH: ${OTE_LENGTH:-6}
-      OTE_MAX_ATTEMPTS: ${OTE_MAX_ATTEMPTS:-5}
-      RESEND_COOLDOWN_SEC: ${RESEND_COOLDOWN_SEC:-30}
-      DEST_PER_MINUTE: ${DEST_PER_MINUTE:-5}
-      RATE_ROUTE_MAX: ${RATE_ROUTE_MAX:-30}
-      NODE_ENV: development
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://ezstack.app}
     volumes:
       - ./scripts:/app/scripts:ro
       - ./secrets:/app/secrets:ro
+    env_file:
+      - .env
     depends_on:
       redis:
         condition: service_healthy
